Upload city background image and spaceship image files

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Zapp</title>
 </head>
 <body>
+
+
+    <div id="game-area"></div>
+
+
+
+
+
  <script src="assets/js/script.js"></script>
 </body>
 </html>
