--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 <body>
 
 
-    <div id="game-area"></div>
+    <div id="game-area">
+        <div class="spaceship">spaceship-1</div>
+        <div class="spaceship">spaceship-2</div>
+        <div class="spaceship">spaceship-3</div>
+        <div class="spaceship">spaceship-4</div>
+        <div class="spaceship">spaceship-5</div>
+        <div class="spaceship">spaceship-6</div>
+        <div class="spaceship">spaceship-7</div>
+        <div class="spaceship">spaceship-8</div>
+    </div>
 
 
 
