Add play button below game area

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 
-
+    <input id="play-btn" type="button" value="Play" onclick="startGame()";/>
  <script src="assets/js/script.js"></script>
 </body>
 </html>
