Add scoreboard div to homepage

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 
+    <div id="score-board">
+        <div id="time"> Time:</div>
+        <div id="score">Score:</div>
+            </div>
+
 
     <div id="game-area">
         <div class="spaceship">spaceship-1</div>
