Add basic style to time and score div

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
     <div id="score-board">
-        <div id="time"> Time:</div>
-        <div id="score">Score:</div>
+        <div id="time"> 40s</div>
+        <div id="score">zapped 2</div>
             </div>
 
 
