Add event listener to play button and adjust startGame function

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
-    
+
     <title>Zapp</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
 
 
 
-    <input id="play-btn" type="button" value="Play" onclick="startGame()";/>
+    <input id="play-btn" type="button" value="Play" />
  <script src="assets/js/script.js"></script>
 </body>
 </html>
