Add onclick score feature to rogue ufo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div id="score-board">
         <div id="time"> 40s</div>
-        <div id="score">zapped 2</div>
+        <div id="player-score">Score:0000</div>
             </div>
 
 
