adjust spaceship div sizes and positioning

--- a/index.html
+++ b/index.html
@@ -15,20 +15,21 @@
 <body>
 
     <div id="score-board">
-        <div id="time"> 40s</div>
+        <div id="time"> 30s</div>
         <div id="player-score">Score: 0000</div>
             </div>
 
 
     <div id="game-area">
-        <div class="spaceship">spaceship-1</div>
-        <div class="spaceship">spaceship-2</div>
-        <div class="spaceship">spaceship-3</div>
-        <div class="spaceship">spaceship-4</div>
-        <div class="spaceship">spaceship-5</div>
-        <div class="spaceship">spaceship-6</div>
-        <div class="spaceship">spaceship-7</div>
-        <div class="spaceship">spaceship-8</div>
+        <div class="spaceship"></div>
+        <div class="spaceship"></div>
+        <div class="spaceship"></div>
+        <div class="spaceship"></div>
+        <div class="spaceship"></div>
+        <div class="spaceship"></div>
+        <div class="spaceship"></div>
+        <div class="spaceship"></div>
+        
     </div>
 
 
