Add negative scoring feature on hitting alien and restyle scoreboard to crypto

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div id="score-board">
         <div id="time"> 30s</div>
-        <div id="player-score">Score: 0000</div>
+        <div id="player-score">Crypto Coins: 0000 </div>
             </div>
 
 
