Add audio feature to start button with onclick and playStart function

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
     
     
 
-
-    <input id="play-btn" type="button" value="Play" />
+    <input id="play-btn" type="button" value="Play" onclick="playStart()" />
  <script src="assets/js/script.js"></script>
 </body>
 </html>
