--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <audio id="audio-start" src="assets/sounds/start-sound.mp3"></audio>
-    <audio id="audio-ufo" src="assets/sounds/bleep.mp3"></audio>
+    <audio id="audio-ufo" src="assets/sounds/hit-ufo.mp3"></audio>
     <audio id="audio-alien" src="assets/sounds/zap-sound.mp3"></audio>
     
     
