Add sound effect feature for hiting the Aliens

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <audio id="audio-start" src="assets/sounds/start-sound.mp3"></audio>
     <audio id="audio-ufo" src="assets/sounds/hit-ufo.mp3"></audio>
-    <audio id="audio-alien" src="assets/sounds/zap-sound.mp3"></audio>
+    <audio id="audio-alien" src="assets/sounds/hit-alien.mp3"></audio>
     
     
 
