--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div id="score-board">
         <div id="time"> 30s</div>
-        <div id="player-score">Crypto Coins: 0000 </div>
+        <div id="player-score">Crypto: 0000 coins</div>
             </div>
 
 
