--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
 
     <div id="score-board">
-        <div id="time"> 30s</div>
-        <div id="player-score">Crypto: 0000 coins</div>
+        <div id="time-display"> Time: 30 seconds</div>
+        <div id="player-score">Crypto Coins: 0000 </div>
             </div>
 
 
