--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </div>
 
     <audio id="audio-start" src="assets/sounds/start-sound.mp3"></audio>
-    <audio id="audio-ufo" src="assets/sounds/hit-ufo.mp3"></audio>
-    <audio id="audio-alien" src="assets/sounds/hit-alien.mp3"></audio>
+    <audio id="audio-ufo" src="assets/sounds/zap-ufo.mp3"></audio>
+    <audio id="audio-alien" src="assets/sounds/zap-alien.mp3"></audio>
     
     
 
