Update score board text

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
 
     <div id="score-board">
-        <div id="time-display"> Timer @ 45sec</div>
-        <div id="player-score">Crypto coins @ 0000 </div>
+        <div id="time-display"> Timer 45sec</div>
+        <div id="player-score">Crypto coins 0000 </div>
             </div>
 
 
