--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <audio id="audio-ufo" src="assets/sounds/zap-ufo.mp3"></audio>
     <audio id="audio-crypto" src="assets/sounds/score-crypto.mp3"></audio>
     <audio id="audio-alien" src="assets/sounds/zap-alien.mp3"></audio>
+    <audio id="audio-gameover" src="assets/sounds/game-over.mp3"></audio>
     
     
 
