Add section to hold all game divs

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 <body>
 
+    <section id ="game-section"> 
+
     <div id="score-board">
         <div id="time-display"> Timer 45sec</div>
         <div id="player-score">Crypto coins 0000 </div>
@@ -34,7 +36,7 @@
 
     <input id="play-btn" type="button" value="Play" onclick="playStart()" />
 
-    
+</section>
 
     <audio id="audio-start" src="assets/sounds/zap-game-music-cut.mp3"></audio>
     <audio id="audio-start-btn" src="assets/sounds/start-sound.mp3"></audio>
