Add about button with styling

--- a/index.html
+++ b/index.html
@@ -32,8 +32,15 @@
         
     </div>
 
-    <input id="play-btn" type="button" value="Play" onclick="playStart()" />
+<div id="game-buttons">
+    <a href='https://ide.geeksforgeeks.org/about.html'>
+        <button id="about-btn">
+            about
+        </button>
+    </a>
 
+    <input id="play-btn" type="button" value="Play" onclick="playStart()" />
+</div>
     
 
     <audio id="audio-start" src="assets/sounds/zap-game-music-cut.mp3"></audio>
