--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
 <div id="game-buttons">
-    <a href='https://ide.geeksforgeeks.org/about.html'>
+    <a href='about.html'>
         <button id="about-btn">
             about
         </button>
