Update  about paragraph

--- a/about.html
+++ b/about.html
@@ -16,27 +16,31 @@
 
 
 
-    <div id="about-game-area">
+  
         <div id="about-zap">
 
-            <h1>zapp.</h1>
+            <h1>zapp</h1>
             <br>
-            <p>a free online game. . .</p>
             <br>
-            <p>help the aliens zap the rogue UFO's.</p>
+            <p>A free online game. </p>
             <br>
-            <p>score crypto coins everytime you zap a UFO </p>
+            <br>
+            <p>Help the aliens zap the rogue UFO's.</p>
+            <br>
+            <br>
+            <p>Score crypto coins everytime you zap a UFO </p>
+            <br>
             <br>
             <p>. . . but be careful, </p>
             <br>
-            <p>if you zap an alien you will loose coins.</p>
+            <p>if you zap an alien you will loose some coins.</p>
         </div>
-    </div>
+   
 
     <div id="game-buttons">
         <a href='index.html'>
             <button id="about-btn">
-                zapp.
+                zapp
             </button>
         </a>
 </body>
