Update spacehip sizing and media queries for small screen landscpe views

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             <p>A free online game. </p>
             <br>
             <br>
-            <p>Help the aliens zap the rogue UFO's.</p>
+            <p>Help the aliens to zap the rogue UFO's.</p>
             <br>
             <br>
             <p>Score crypto coins everytime you zap a UFO </p>
