Update about page text content

--- a/about.html
+++ b/about.html
@@ -18,10 +18,8 @@
 
   
         <div id="about-zap">
-
             <h1>zapp</h1>
             <br>
-           
             <p>A free online game. </p>
             <br>
             <br>
@@ -29,15 +27,12 @@
             <p>Help the aliens to zap the rogue UFO's.</p>
             <br>
             <br>
-            <p>Score crypto coins everytime you zap a UFO </p>
+            <p>Score coins everytime you zap a UFO </p>
             <br>
             <br>
-            <p>. . . but be careful, </p>
-            <br>
-            <p>if you zap an alien you will loose some coins.</p>
+            <p>. . . but loose coins if you zap an alien. </p>
         </div>
    
-
     <div id="game-buttons">
         <a href='index.html'>
             <button id="about-btn">
