Update text and style on about page

--- a/about.html
+++ b/about.html
@@ -20,17 +20,17 @@
         <div id="about-zap">
             <h1>zapp</h1>
             <br>
-            <p>A free online game. </p>
+            <p id="zap-descript">A free online game. </p>
+            <br>
+            <hr>
             <br>
             <br>
             <br>
-            <p>Help the aliens to zap the rogue UFO's.</p>
+           <p>Aliens are chasing a rogue UFO...</p>
             <br>
+            <p>Help the aliens and score coins everytime you zap the UFO.</p>
             <br>
-            <p>Score coins everytime you zap a UFO </p>
-            <br>
-            <br>
-            <p>. . . but loose coins if you zap an alien. </p>
+            <p>But be careful . . you'll loose coins if you zap an alien. </p>
         </div>
    
     <div id="game-buttons">
