Clean up css code

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
             <br>
             <br>
             <br>
-           <p>Aliens are chasing a rogue UFO...</p>
+           <p>Friendly aliens are chasing a rogue UFO...</p>
             <br>
             <p>Help the aliens and score coins everytime you zap the UFO.</p>
             <br>
