Remove button element and restyle link on about page

--- a/about.html
+++ b/about.html
@@ -34,9 +34,6 @@
         </div>
    
     <div id="game-buttons">
-        <a href='index.html'>
-            <button id="about-btn">
-                zapp
-            </button>
-        </a>
+        <a id="about-btn" href='index.html'>zapp</a>
+        </div>
 </body>
