update about page text

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <body>
 
 
-
+    <div id="about-spaceship"></div>
   
         <div id="about-zap">
             <h1>zapp</h1>
@@ -26,9 +26,9 @@
             <br>
             <br>
             <br>
-           <p>Friendly aliens are chasing a rogue UFO...</p>
+           <p>A rogue UFO is flying through the aliens city.</p>
             <br>
-            <p>Help the aliens and score coins everytime you zap the UFO.</p>
+            <p>Help the aliens and score coins by zapping the UFO.</p>
             <br>
             <p>But be careful . . you'll loose coins if you zap an alien. </p>
         </div>
