Restyle button links

--- a/game.html
+++ b/game.html
@@ -33,10 +33,10 @@
     </div>
 
 <div id="game-buttons">
-    <a href='index.html'>
-        <button id="about-btn">
-            about
-        </button>
+    <a  class="button-links" href='index.html'>
+      
+            home
+        
     </a>
 
     <input id="play-btn" type="button" value="Play" onclick="playStart()" />
