--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
         </div>
    
     <div id="game-buttons">
-        <a id="about-btn" href='about.html'>zapp</a>
+        <a class="button-links" href='game.html'>Enter</a>
         </div>
 </body>
