Add sections and clean up html & css for landing page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,28 +13,34 @@
 
     <title>Zapp</title>
 </head>
+
 <body>
 
+    <section id="game-name" class="flex-container">
 
-    <div id="about-spaceship"></div>
-  
-        <div id="about-zap">
-            <h1>zapp</h1>
+        <div id="ufo-img-home"></div>
+
+        <div class="flex-container">
+            <h1 id="h1-zapp">zapp</h1>
             <br>
             <p id="zap-descript">A free online game. </p>
             <br>
-            <hr>
-            <br>
-            <br>
-            <br>
-           <p>A rogue UFO is flying through the aliens city.</p>
-            <br>
-            <p>Help the aliens and score coins by zapping the UFO.</p>
-            <br>
-            <p>But be careful . . you'll loose coins if you zap an alien. </p>
+            <hr id="hr-white">
         </div>
-   
-    <div id="game-buttons">
-        <a class="button-links" href='game.html'>Enter</a>
+    </section>
+
+    <section id="game-storyline" class="flex-container">
+        <p>A rogue UFO is flying through the aliens city.</p>
+        <br>
+        <p>Help the aliens and score coins by zapping the UFO.</p>
+        <br>
+        <p>But be careful . . you'll loose coins if you zap an alien. </p>
+
+    </section>
+
+    <section id="game-enter" class="flex-container">
+        <div id="game-buttons">
+            <a class="button-links" href='game.html'>Enter</a>
         </div>
+    </section>
 </body>
