fix on hover feature for game buttons

--- a/game.html
+++ b/game.html
@@ -34,7 +34,7 @@
     <!-- </div> -->
 </section>
 
-<section id="game-buttons">
+<section class="game-buttons">
   <!-- <div id="game-buttons"> -->
     <a  class="button-links" href='index.html'>home</a>
 
