--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <section id="game-enter" class="flex-container">
-        <div id="game-buttons">
+        <div class="game-buttons">
             <a class="button-links" href='game.html'>Enter</a>
         </div>
     </section>
