Update landing page paragraph

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
     <section id="game-storyline" class="flex-container">
         <p>A rogue UFO is flying through the aliens city.</p>
         <br>
-        <p>Help the aliens and score coins by zapping the UFO.</p>
+        <p>Help the friendly aliens by clicking or tapping to zap the UFO.</p>
         <br>
-        <p>But be careful . . you'll loose coins if you zap an alien. </p>
+        <p>Score coins when you zap the UFO </p>
+        <br>
+        <p>but be careful . .  you'll loose coins if you zap an alien. </p>
 
     </section>
 
