Add a reset button to game page with event listener and function to restart game

--- a/game.html
+++ b/game.html
@@ -38,6 +38,7 @@
   <!-- <div id="game-buttons"> -->
     <a  class="button-links" href='index.html'>home</a>
 
+    <input id="reset-btn" type="button" value="Reset" onclick="refreshGame()" />
     <input id="play-btn" type="button" value="Play" onclick="playStart()" />
 <!-- </div> -->
     
