Replace home link on game page with js button feature

--- a/game.html
+++ b/game.html
@@ -37,16 +37,14 @@
 
 <section class="game-buttons">
   <!-- <div id="game-buttons"> -->
-    <a  class="button-links" href='index.html'>home</a>
+    <!-- <a  class="button-links" href='index.html'>home</a> -->
 
+    <input id="home-btn" type="button" value="Home" onclick="returnHome()" />
     <input id="play-btn" type="button" value="Play" onclick="playStart()" />
-
     <div>
         <i id ="audio-off" class="fa fa-volume-mute" onclick="enableMute()"></i>
         <i id ="audio-on" class="fas fa-volume-up"></i>
     </div>
-
-
     <input id="reset-btn" type="button" value="Reset" onclick="refreshGame()" />
     
 <!-- </div> -->
