Replace index section elements with div elements as per html validator warnings regarding no headings

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <section id="game-name" class="flex-container">
+    <div id="game-name" class="flex-container">
 
         <div id="ufo-img-home"></div>
 
@@ -28,20 +28,21 @@
             <br>
             <hr id="hr-white">
         </div>
-    </section>
+    </div>
 
-    <section id="game-storyline" class="flex-container">
+    <div id="game-storyline" class="flex-container">
         <p>A rogue UFO is flying through the aliens city.</p>
         <br>
         <p>Help the friendly aliens and score coins by zapping the UFO.</p>
         <br>
         <p>But be careful . . you'll loose coins if you zap an alien. </p>
 
-    </section>
+    </div>
 
-    <section id="game-enter" class="flex-container">
+    <div id="game-enter" class="flex-container">
         <div class="game-buttons">
             <a class="button-links" href='game.html'>Enter</a>
         </div>
-    </section>
+    </div>
+    <script src="assets/js/script.js"></script>
 </body>
