--- a/game.html
+++ b/game.html
@@ -17,14 +17,12 @@
 
 <body>
 
-    <section id="game-scoreboard">
-        <!-- <div id="score-board"> -->
+    <div id="game-scoreboard">
         <div id="time-display"> Timer 45sec</div>
         <div id="player-score">Crypto coins 0000 </div>
-        <!-- </div> -->
-    </section>
+        </div>
 
-    <section id="game-area">
+    <div id="game-area">
         <!-- <div id="game-area"> -->
         <div class="spaceship"></div>
         <div class="spaceship"></div>
@@ -35,9 +33,9 @@
         <div class="spaceship"></div>
         <div class="spaceship"></div>
         <!-- </div> -->
-    </section>
+        </div>
 
-    <section class="game-buttons">
+    <div class="game-buttons">
 
         <input id="home-btn" type="button" value="Home" onclick="returnHome()" />
         <input id="play-btn" type="button" value="Play" onclick="playStart()" />
@@ -47,17 +45,17 @@
         </div>
         <input id="reset-btn" type="button" value="Reset" onclick="refreshGame()" />
 
-    </section>
+    </div>
 
 
-    <section id="game-audio">
+    <div id="game-audio">
         <audio id="audio-start" src="assets/sounds/zap-game-music-cut.mp3"></audio>
         <audio id="audio-start-btn" src="assets/sounds/start-sound.mp3"></audio>
         <audio id="audio-ufo" src="assets/sounds/zap-ufo.mp3"></audio>
         <audio id="audio-crypto" src="assets/sounds/score-crypto.mp3"></audio>
         <audio id="audio-alien" src="assets/sounds/zap-alien.mp3"></audio>
         <audio id="audio-gameover" src="assets/sounds/game-over.mp3"></audio>
-    </section>
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 
