--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div id="game-enter" class="flex-container">
         <div class="game-buttons">
-            <a class="enter-link" href='game.html'>Enter</a>
+            <a id="enter-link" href='game.html'>Enter</a>
         </div>
     </div>
     <script src="assets/js/script.js"></script>
