Remove unnecessary onclick from buttons on game html page

--- a/game.html
+++ b/game.html
@@ -37,13 +37,13 @@
 
     <div class="game-buttons">
 
-        <input id="home-btn" type="button" value="Home" onclick="returnHome()" />
-        <input id="play-btn" type="button" value="Play" onclick="playStart()" />
+        <input id="home-btn" type="button" value="Home" />
+        <input id="play-btn" type="button" value="Play" />
         <div>
             <i id="audio-off" class="fa fa-volume-mute" onclick="enableMute()"></i>
             <i id="audio-on" class="fas fa-volume-up"></i>
         </div>
-        <input id="reset-btn" type="button" value="Reset" onclick="refreshGame()" />
+        <input id="reset-btn" type="button" value="Reset"  />
 
     </div>
 
