Add modal feature to display score results when game finishes

--- a/game.html
+++ b/game.html
@@ -44,7 +44,17 @@
             <i id="audio-on" class="fas fa-volume-up"></i>
         </div>
         <input id="reset-btn" type="button" value="Reset"  />
+    </div>
 
+
+
+    <!-- The Modal -->
+<div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+      <p id="score-result"></p>
+      <span class="close">&times;</span>
     </div>
 
     <script src="assets/js/script.js"></script>
