Update code comments

--- a/game.html
+++ b/game.html
@@ -16,14 +16,13 @@
 </head>
 
 <body>
-
+<!-- Timer & Score -->
     <div id="game-scoreboard">
         <div id="time-display"> Timer 45sec</div>
         <div id="player-score">Crypto coins 0000 </div>
         </div>
-
+<!-- Game area for spaceships -->
     <div id="game-area">
-        <!-- <div id="game-area"> -->
         <div class="spaceship"></div>
         <div class="spaceship"></div>
         <div class="spaceship"></div>
@@ -32,11 +31,10 @@
         <div class="spaceship"></div>
         <div class="spaceship"></div>
         <div class="spaceship"></div>
-        <!-- </div> -->
         </div>
 
+<!-- Game buttons -->
     <div class="game-buttons">
-
         <input id="home-btn" type="button" value="Home" />
         <input id="play-btn" type="button" value="Play" />
         <div>
@@ -48,7 +46,7 @@
 
 
 
-    <!-- The Modal -->
+<!-- Game results Modal -->
 <div id="myModal" class="modal">
 
     <!-- Modal content -->
