--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
 </head>
 
 <body>
-
+<!-- UFO image and heading-->
     <div id="game-name" class="flex-container">
-
         <div id="ufo-img-home"></div>
-
-        <div class="flex-container">
+          <div class="flex-container">
             <h1 id="h1-zapp">zapp</h1>
             <br>
             <p id="zap-descript">A free online game. </p>
@@ -30,6 +28,7 @@
         </div>
     </div>
 
+<!-- game storyline-->
     <div id="game-storyline" class="flex-container">
         <p>A rogue UFO is flying through the aliens city.</p>
         <br>
@@ -38,7 +37,7 @@
         <p>But be careful . . you'll loose coins if you zap an alien. </p>
 
     </div>
-
+<!-- game storyline-->
     <div id="game-enter" class="flex-container">
         <div class="game-buttons">
             <a id="enter-link" href='game.html'>Enter</a>
