Add info icon to game page

--- a/game.html
+++ b/game.html
@@ -42,6 +42,9 @@
             <i id="audio-on" class="fas fa-volume-up"></i>
         </div>
         <input id="reset-btn" type="button" value="Reset"  />
+        <div> 
+            <i id ="game-info" class="fas fa-info-circle"></i>
+        </div>  
     </div>
 
 
