Add info modal to game page

--- a/game.html
+++ b/game.html
@@ -51,12 +51,25 @@
 
 <!-- Game results Modal -->
 <div id="myModal" class="modal">
-
     <!-- Modal content -->
-    <div class="modal-content">
-      <p id="score-result"></p>
+     <div class="modal-content">
+       <p id="score-result"></p>
       <span class="close">&times;</span>
     </div>
+
+
+<!-- The info Modal -->
+    <div id="infoModal" class="modal">
+        <!-- Modal content -->
+         <div class="modal-content">
+           <span id="info-span" class="close">&times;</span>
+          <p id="info-paragraph"></p>
+        
+        </div>
+      
+      </div>
+
+
 
     <script src="assets/js/script.js"></script>
 </body>
