Replace home button with home icon

--- a/game.html
+++ b/game.html
@@ -35,16 +35,23 @@
 
 <!-- Game buttons -->
     <div class="game-buttons">
-        <input id="home-btn" type="button" value="Home" />
-        <input id="play-btn" type="button" value="Play" />
         <div>
             <i id="audio-off" class="fa fa-volume-mute" onclick="enableMute()"></i>
+        </div>
+        <div>
             <i id="audio-on" class="fas fa-volume-up"></i>
         </div>
+
+        <!-- <input id="home-btn" type="button" value="Home" /> -->
+        <input id="play-btn" type="button" value="Play" />
+        
         <input id="reset-btn" type="button" value="Reset"  />
         <div> 
             <i id ="game-info" class="fas fa-info-circle"></i>
         </div>  
+        <div>
+            <i id="home-icon"class="fas fa-home"></i>
+          </div>
 
     </div>
 
