Upload modal screen shots for readme

--- a/game.html
+++ b/game.html
@@ -19,7 +19,7 @@
 <!-- Timer & Score -->
     <div id="game-scoreboard">
         <div id="time-display"> Timer 45sec</div>
-        <div id="player-score">Crypto coins 0000 </div>
+        <div id="player-score">Crypto Coins 0000 </div>
         </div>
 <!-- Game area for spaceships -->
     <div id="game-area">
