--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
 
     <title>Zapp</title>
+    <link rel="icon" type="image/x-icon" href="/images/zappfavicon.ico">
 </head>
 
 <body>
