--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
 
+    <link rel="icon" href="assets/images/favicon.png" type="image/png">
     <title>Zapp</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  
 </head>
 
 <body>
