add aria labels to game buttons

--- a/game.html
+++ b/game.html
@@ -36,18 +36,18 @@
     <!-- Game buttons -->
     <div class="game-buttons">
         <div>
-            <i id="audio-off" class="fa fa-volume-mute" onclick="enableMute()"></i>
+            <i id="audio-off" class="fa fa-volume-mute" aria-label="audio-mute-on-icon"></i>
         </div>
         <div>
-            <i id="audio-on" class="fas fa-volume-up"></i>
+            <i id="audio-on" class="fas fa-volume-up" aria-label="audio-mute-off-icon"></i>
         </div>
-        <input id="play-btn" type="button" value="Play" />
-        <input id="reset-btn" type="button" value="Reset" />
+        <input id="play-btn" type="button" value="Play" aria-label="start-game-button"/>
+        <input id="reset-btn" type="button" value="Reset" aria-label="reset-game-button"/>
         <div>
-            <i id="game-info" class="fas fa-info-circle"></i>
+            <i id="game-info" class="fas fa-info-circle" aria-label="game-information-icon"></i>
         </div>
         <div>
-            <i id="home-icon" class="fas fa-home"></i>
+            <i id="home-icon" class="fas fa-home" aria-label="home-page-icon"></i>
         </div>
 
     </div>
