--- a/game.html
+++ b/game.html
@@ -11,7 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
-
+    
+    <link rel="icon" href="assets/images/favicon.png" type="image/png">
     <title>Zapp</title>
 </head>
 
