Update code comments

--- a/game.html
+++ b/game.html
@@ -55,7 +55,7 @@
 
 
     <!-- The Game results Modal -->
-    <div id="myModal" class="modal">
+    <div id="resultsModal" class="modal">
 
         <!-- Modal content -->
         <div class="modal-content">
