--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <br>
         <p>Help the friendly aliens and score coins by zapping the UFO.</p>
         <br>
-        <p>But be careful . . you'll loose coins if you zap an alien. </p>
+        <p>But be careful . . you'll loose coins if you zap an alien spaceship. </p>
 
     </div>
     <!-- game storyline-->
